--- a/frontend/src/styles/pages/_home.scss
+++ b/frontend/src/styles/pages/_home.scss
@@ -1,3 +1,15 @@
-.main-content{
-    height: 100%;
+.home-parags{
+    width: 80%;
+    @include flex-column-center;
+    &__h1 {
+        color: map-get($identity-colors, primary);
+    }
+    &__h2 {
+        align-self: flex-start;
+        color: map-get($identity-colors, primary);
+      
+    }
+    &__p{
+        text-align: justify;
+    }
 }
