--- a/frontend/src/styles/layout/_header.scss
+++ b/frontend/src/styles/layout/_header.scss
@@ -1,16 +1,26 @@
-.header{
-    @include flex-row-center;
-    height: 4rem;
+header {
+    @include flex-column-center;
     width: 100%;
+    padding: 0;
     background-color: map-get($identity-colors, tertiary);
-    justify-content: space-between;
+    border-bottom: solid map-get($other-colors, primary-s);
     position: sticky;
     top: 0;
 }
 
-.header-left {
-    height: 80%;
+.header-nav {
+    @include flex-row-center;
+    justify-content: space-between;
+    height: 4rem;
+    width: 100%;
+    margin: 0;
     
+    
+}
+
+.header-left {
+    height: 100%;
+      
     &__logo {
     height: 100%;
     width: 15rem;
@@ -46,12 +56,12 @@
 .header-right{
     @include flex-row-center;
     @include link-state;
-    justify-self: end;
+    justify-self: flex-end;
+      
     &__links{
-        display: flex;
-        align-items: center;
+        @include flex-row-center;
         height: 100%;
-        width: 75%;        
+        width: 100%;       
     }
     &__link{
         margin-right: 2rem;
