:art: :lipstick: :construction: initiated error compoment + improved the contact page structure and styling + other styling changes + added initiale structure for login page

--- a/frontend/src/styles/pages/_contact.scss
+++ b/frontend/src/styles/pages/_contact.scss
@@ -1,15 +1,23 @@
 .contact-area{
     width: auto;
     @include flex-column-center;
-    &__h1 {
-        color: map-get($identity-colors, primary);
+    
+    &__form{
+        display: flex;
+        flex-direction: column;
+        gap: 0.7rem;
     }
-    &__h2 {
-        align-self: flex-start;
-        color: map-get($identity-colors, primary);
-      
+    &__group {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
     }
-    &__p{
-        text-align: justify;
+
+    &__label{
+        @include txt-sz-wght(big-normal);
+    }
+    &__btn{
+        @include common-button;
+        @include link-state;
     }
 }
