--- a/frontend/src/styles/utils/_mixins.scss
+++ b/frontend/src/styles/utils/_mixins.scss
@@ -4,14 +4,18 @@
     font-weight: map-get($text-style, weight);
 }
 
+@mixin headings-effect{
+    color: map-get($identity-colors, primary);
+    text-shadow: 5px 5px 5px rgb(212, 206, 206);
+}
+
 @mixin common-button {
-    @include txt-sz-wght (small-normal);
-    background: linear-gradient(180deg, map-get($identity-colors, secondary), map-get($identity-colors, primary));
-    color: map-get($text-colors , secondary);
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px rgb(212, 206, 206);
-    padding: 12px 16px 12px 16px;
-    transition: all 800ms ease-in;
+    @include txt-sz-wght (big-normal);
+    border: solid map-get($identity-colors, primary);
+    color: map-get($identity-colors , primary);
+    background-color: map-get($identity-colors, secondary);
+    border-radius: 10rem;
+    padding: 0.4rem;
     &:hover{
         opacity: 0.85;
         box-shadow: 5px 5px 5px rgb(112, 110, 110);
