--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -7,5 +7,7 @@
 @import './layout/footer';
 
 @import './pages/home';
+@import './pages/login';
+@import './pages/singup';
 @import './pages/contact';
 @import './pages/mentions'
