--- a/frontend/src/styles/pages/_contact.scss
+++ b/frontend/src/styles/pages/_contact.scss
@@ -1,23 +1,3 @@
 .contact-area{
-    width: auto;
-    @include flex-column-center;
-    
-    &__form{
-        display: flex;
-        flex-direction: column;
-        gap: 0.7rem;
-    }
-    &__group {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-
-    &__label{
-        @include txt-sz-wght(big-normal);
-    }
-    &__btn{
-        @include common-button;
-        @include link-state;
-    }
+   @include common-form;
 }
