:art: :lipstick: :construction: changed font to Lato in order to respect the client updated instructions

--- a/frontend/src/styles/utils/_variables.scss
+++ b/frontend/src/styles/utils/_variables.scss
@@ -1,5 +1,5 @@
 //font variables
-$general-font: 'Nunito', sans-serif;
+$general-font: 'Lato', sans-serif;
 
 //colors variables map
 $identity-colors: 
