:fire: :truck: :lipstick: joined login and signup pages - added a lightswitch button for dark mode

--- a/frontend/src/styles/layout/_header.scss
+++ b/frontend/src/styles/layout/_header.scss
@@ -59,6 +59,7 @@ header {
 
 }*/
 
+
 .header-right{
     @include flex-row-center;
     @include link-state;
@@ -80,9 +81,13 @@ header {
         //margin-right: 2rem;
         cursor: pointer;
     }
-    
+    &__switch{
+        color: map-get($identity-colors, primary);
+        @include txt-sz-wght(big-normal);
+    }
 
 }
+
 
 /*.header-icons{
     display: flex;
