--- a/frontend/src/styles/base/_global.scss
+++ b/frontend/src/styles/base/_global.scss
@@ -2,13 +2,19 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    outline: none;
+}
+
 body {
     font-family: $general-font;
     margin: 0; 
-    padding: 0;  
+    padding: 0;
     background-color: map-get($other-colors, light);
-    //display: flex;
-    //flex: column nowrap;
+    
 }
 
 .main-content-wrapper {
