:fire: :bug: :lipstick: :iphone: changed some problematic code for responsive improvement + done some style changes to the headings and buttons mixins

--- a/frontend/src/styles/base/_global.scss
+++ b/frontend/src/styles/base/_global.scss
@@ -4,8 +4,6 @@
 
 *{
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
     outline: none;
 }
 
@@ -17,14 +15,26 @@ body {
     
 }
 
+/*#root{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: stretch;
+    justify-items: stretch;
+    padding: 0;
+    width: 100%;
+}*/
+
 .main-content-wrapper {
     height: auto;
     width: auto;
     padding: 0rem 2rem 5rem 2rem;
     @include flex-column-center;
+    
 }
 
 h1, h2{
+    
     @include headings-effect;
 }
 
