--- a/frontend/src/styles/utils/_mixins.scss
+++ b/frontend/src/styles/utils/_mixins.scss
@@ -5,17 +5,21 @@
 }
 
 @mixin headings-effect{
-    color: map-get($identity-colors, primary);
+    color: map-get($identity-colors, tertiary);
     text-shadow: 5px 5px 5px rgb(212, 206, 206);
+    //border-bottom: solid 0.1rem;
+    border-left: solid 0.2rem map-get($other-colors, secondary-s);
+    padding-left: 0.2rem;
 }
 
 @mixin common-button {
-    @include txt-sz-wght (big-normal);
-    border: none;
-    color: map-get($other-colors , light);
-    background-color: map-get($identity-colors, tertiary);
-    border-radius: 10rem;
-    padding: 0.4rem;
+    @include txt-sz-wght (big-bold);
+    border: solid 0.2rem map-get($identity-colors, primary);
+    color: map-get($identity-colors, tertiary);
+    background-color: map-get($other-colors , light);
+    border-radius: 0.5rem;
+    padding: 0.2rem;
+    width: 8rem;
     &:hover{
         opacity: 0.85;
         box-shadow: 5px 5px 5px rgb(112, 110, 110);
@@ -28,21 +32,33 @@
     @include flex-column-center;
     
     &__form{
+        //border: black solid;
         display: flex;
         flex-direction: column;
         gap: 0.7rem;
     }
     &__group {
+        //border: solid pink;
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
     }
+    &__btns{
+        flex-direction: row !important;
+    }
     &__label{
-        @include txt-sz-wght(big-normal);
+        @include txt-sz-wght(big-bold);
     }
     &__input{
+        border: solid 0.2rem map-get($identity-colors, secondary);
+        border-radius: 0.5rem;
         padding: 0.5rem;
     }
+    &__textarea{
+        border: solid 0.2rem map-get($identity-colors, tertiary);
+        border-radius: 0.5rem;
+    }
+
     &__btn{
         @include common-button;
         @include link-state;
