--- a/frontend/src/styles/utils/_mixins.scss
+++ b/frontend/src/styles/utils/_mixins.scss
@@ -19,7 +19,7 @@
     background-color: map-get($other-colors , light);
     border-radius: 0.5rem;
     padding: 0.2rem;
-    width: 8rem;
+    width: 13rem;
     &:hover{
         opacity: 0.85;
         box-shadow: 5px 5px 5px rgb(112, 110, 110);
@@ -35,6 +35,7 @@
         //border: black solid;
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         gap: 0.7rem;
     }
     &__group {
@@ -42,9 +43,6 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-    }
-    &__btns{
-        flex-direction: row !important;
     }
     &__label{
         @include txt-sz-wght(big-bold);
