--- a/frontend/src/styles/compoments/_post.scss
+++ b/frontend/src/styles/compoments/_post.scss
@@ -7,10 +7,11 @@
     /*box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.68);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.68);*/
     @include flex-column-center;
-    gap: 0.5rem;
+    gap: 1.5rem;
     color: map-get($identity-colors, tertiary); 
     //align-items: flex-start;
-    border: solid rosybrown 2px;
+    //border: solid rosybrown 2px;
+    border: solid 0.1rem map-get($other-colors, secondary-s );
     @include desk-screen {
         max-width:500px;
     }
@@ -23,18 +24,25 @@
         width: 100%;
         height: 40%;
         display: flex;
+        
         padding: 0;
         //justify-content: space-between;
-        //justify-content: space-between;
-        //gap: 0.8rem;
+        justify-content: space-between;
         align-self: flex-start;
-        border: solid 2px blue;
+        //border: solid 2px blue;
+    }
+    &__topLeft{
+        display: flex;
     }
     &__profileImg{
-        border: solid 2px black;
-        border-radius: 50%;
-        width: 3rem;
-        height: 3rem;
+        //border: solid 2px black;
+        -webkit-box-shadow: 5px 5px 5px map-get($identity-colors, tertiary);
+        box-shadow: 5px 5px 5px map-get($identity-colors, tertiary);
+        border: solid 0.1rem map-get($other-colors, secondary-s );
+        //background-color: map-get($other-colors, tertiary-s );
+        border-radius: 20%;
+        width: 4rem;
+        height: 4rem;
         object-fit: cover;
         
     }
@@ -42,15 +50,22 @@
         @include txt-sz-wght (medium-bold);
         align-self: flex-end;
         margin-left: 0.5rem;
-        margin-right: 0;
-        border: solid 2px black;
+        margin-right: 0rem;
+        //border: solid 2px black;
+    }
+    &__topRight{
+        //border: solid blue 1px;
+        display: flex;
+        align-self: flex-end;
+        padding: 0;
     }
     &__date{
         @include txt-sz-wght (medium-normal);
-        margin-left: 5rem;
-        margin-right: 0;
+        //margin-left: 5rem;
+        //margin-right: 0;
         align-self: flex-end;
-        border: solid 2px black;
+        
+        //border: solid 2px black;
        
     }
 
@@ -61,19 +76,20 @@
         width: 100%;
         @include flex-column-center;
         gap: 0.5rem;
-        border: solid 2px red;
+        //border: solid 2px red;
         
     }
 
     &__content{
         align-self: flex-start;
-        border: solid blue 2px;
+        //border: solid blue 2px;
     }
 
     &__media{
-        border: solid blue 2px;
+        //border: solid blue 2px;
         border-radius: 0.5rem;
         object-fit: cover;
+        max-width: 75%;
         max-height: 50%;
     }
 
@@ -82,7 +98,7 @@
     &__bottom{
         height: 10%;
         width: 100%;
-        border: solid 2px green;
+        //border: solid 2px green;
         @include txt-sz-wght(medium-bold);
         display: flex;
         justify-content: flex-end;
