--- a/frontend/src/styles/compoments/_publish.scss
+++ b/frontend/src/styles/compoments/_publish.scss
@@ -10,7 +10,7 @@
     gap: 0.5rem;
     color: map-get($identity-colors, tertiary); 
     //align-items: flex-start;
-    border: solid rosybrown 2px;
+    border: solid 0.2rem map-get($identity-colors, secondary);
     @include desk-screen {
         max-width:500px;
     }
@@ -28,29 +28,33 @@
         //justify-content: space-between;
         //gap: 0.8rem;
         align-self: flex-start;
-        border: solid 2px blue;
+        //border: solid 2px blue;
     }
     &__profileImg{
-        border: solid 2px black;
-        border-radius: 50%;
-        width: 3rem;
-        height: 3rem;
-        object-fit: cover;
+         //border: solid 2px black;
+         -webkit-box-shadow: 5px 5px 5px map-get($identity-colors, tertiary);
+         box-shadow: 5px 5px 5px map-get($identity-colors, tertiary);
+         border: solid 0.1rem map-get($other-colors, secondary-s );
+         //background-color: map-get($other-colors, tertiary-s );
+         border-radius: 20%;
+         width: 4rem;
+         height: 4rem;
+         object-fit: cover;
         
     }
     &__firstName{
         @include txt-sz-wght (medium-bold);
         align-self: flex-end;
         margin-left: 0.5rem;
-        margin-right: 0;
-        border: solid 2px black;
+        margin-right: 0rem;
+        //border: solid 2px black;
     }
 
 
     &__bottom{
         height: 60%;
         width: 100%;
-        border: solid 2px green;
+        //border: solid 2px green;
         @include txt-sz-wght(medium-bold);
         display: flex;
         flex-direction: column;
