:sparkles: :construction: initial users list page and user compoment functionnal structure

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -8,9 +8,12 @@
 
 @import './compoments/post';
 @import './compoments/publish';
+@import './compoments/user';
+
 
 @import './pages/home';
 @import './pages/login';
 @import './pages/contact';
 @import './pages/mentions';
 @import './pages/feed';
+@import './pages/users';
