--- a/frontend/src/styles/pages/_users.scss
+++ b/frontend/src/styles/pages/_users.scss
@@ -7,6 +7,6 @@
     flex-direction: column;
     justify-content: stretch;
     align-items: stretch;*/
-    border: solid 2px black;
+    //border: solid 2px black;
     
 }
