:alembic: some (failed) tests on user images + improved the like system + added the delete operation to the frontend

--- a/frontend/src/styles/compoments/_post.scss
+++ b/frontend/src/styles/compoments/_post.scss
@@ -105,6 +105,10 @@
         gap: 0.5rem;
     }
 
+    &__icon{
+        fill: none;
+    }
+
     &__modify{
     @include common-button;
     @include txt-sz-wght(small-normal);
