:art: :sparkles: initial post modifying page structure and functionnalities + style

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -16,4 +16,5 @@
 @import './pages/contact';
 @import './pages/mentions';
 @import './pages/feed';
+@import './pages/modify';
 @import './pages/users';
