:art: :sparkles: resolved button display problem according to connected user and insured the functional modifying feature for texte - still need to resolve image input problem

--- a/frontend/src/styles/compoments/_post.scss
+++ b/frontend/src/styles/compoments/_post.scss
@@ -46,7 +46,7 @@
         object-fit: cover;
         
     }
-    &__firstName{
+    &__firstName, &__lastName {
         @include txt-sz-wght (medium-bold);
         align-self: flex-end;
         margin-left: 0.5rem;
