--- a/frontend/src/styles/compoments/_publish.scss
+++ b/frontend/src/styles/compoments/_publish.scss
@@ -25,8 +25,7 @@
         display: flex;
         padding: 0;
         //justify-content: space-between;
-        //justify-content: space-between;
-        //gap: 0.8rem;
+        gap: 0.2rem;
         align-self: flex-start;
         //border: solid 2px blue;
     }
@@ -50,6 +49,18 @@
         //border: solid 2px black;
     }
 
+    &__logoutIcon{
+        //border: solid rosybrown 2px;
+        align-self: flex-start;
+        margin-right: 0;
+        margin-left: auto;
+    }
+
+    &__icon{
+        //border: solid 1px black;
+        @include icons;
+        color: map-get($identity-colors, tertiary);
+    }
 
     &__bottom{
         height: 60%;
